--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,9 +12,12 @@ jobs:
           fetch-depth: 0
       - name: Create local changes
         run: |
+          ping -c 1 yusuke.cloud
           mkdir -p ./docs
           bash ./tinystatus > ./docs/index.html
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
+          branch: publish
